--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.0</version>
+        <version>2.5.9-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>br.com.lucio</groupId>
@@ -14,7 +14,7 @@
     <name>config-server</name>
     <description>config-server</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>16</java.version>
         <spring-cloud.version>2020.0.5</spring-cloud.version>
     </properties>
     <dependencies>
