--- a/greeting/application-dev.yml
+++ b/greeting/application-dev.yml
@@ -10,7 +10,7 @@ management:
           - '*'
 
 greeting-service:
-  greeting: "Teste"
-  default-value: "Valor default dev"
+  greeting: "Teste alt"
+  default-value: "Valor default dev alt"
 
 
