--- a/greeting/application-perf.yml
+++ b/greeting/application-perf.yml
@@ -10,7 +10,7 @@ management:
           - '*'
 
 greeting-service:
-  greeting: "Teste"
-  default-value: "Valor default perf"
+  greeting: "Teste alt"
+  default-value: "Valor default perf alt"
 
 
