--- a/greeting/application-qa.yml
+++ b/greeting/application-qa.yml
@@ -10,7 +10,7 @@ management:
           - '*'
 
 greeting-service:
-  greeting: "Teste"
-  default-value: "Valor default qa"
+  greeting: "Testqa alt e"
+  default-value: "Valor default qa alt"
 
 
