--- a/greeting/src/main/resources/application.yml
+++ b/greeting/src/main/resources/application.yml
@@ -1,14 +1,16 @@
+server:
+  port: 8080
 spring:
   application:
-    name: greeting
-
+    name: greeting-service
+  config:
+    import: optional:configserver:http://localhost:8888/
+  cloud:
+    config:
+      profile: qa
 management:
   endpoints:
     web:
       exposure:
         include:
-          - '*'
-
-greeting-service:
-  greeting: "Teste"
-  default-value: "Valor default"
+        - '*'
