--- a/greeting/application-prod.yml
+++ b/greeting/application-prod.yml
@@ -10,7 +10,7 @@ management:
           - '*'
 
 greeting-service:
-  greeting: "Test alt e "
-  default-value: "Valor default alt"
+  greeting: "Prod"
+  default-value: "Você esta no profile prod"
 
 
