--- a/greeting/application-perf.yml
+++ b/greeting/application-perf.yml
@@ -10,7 +10,7 @@ management:
           - '*'
 
 greeting-service:
-  greeting: "Teste alt"
+  greeting: "Perf"
   default-value: "Você esta no profile perf"
 
 
