--- a/greeting/pom.xml
+++ b/greeting/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.lucio</groupId>
-	<artifactId>greeting-service</artifactId>
+	<artifactId>greeting</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>04-greeting-service</name>
+	<name>greeting-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>16</java.version>
