--- a/book/src/main/resources/application.yml
+++ b/book/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
+  jackson:    default-property-inclusion: NON_NULL
   jpa:
     show-sql: true
     hibernate:
