--- a/cambio/src/main/resources/application.yml
+++ b/cambio/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 8000
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 spring:  application:    name: cambio
   datasource:
     url: jdbc:postgresql://localhost:5432/cambio?useTimezone=true&serverTimezone=UTC
