--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -6,3 +6,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka
       
 spring:  application:    name: api-gateway
+  cloud:    gateway:      discovery:        locator:          enabled: true
