--- a/cambio/src/main/resources/application.yml
+++ b/cambio/src/main/resources/application.yml
@@ -5,6 +5,12 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 spring:  application:    name: cambio
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
   datasource:
     url: jdbc:postgresql://localhost:5432/cambio?useTimezone=true&serverTimezone=UTC
     driver-class-name: org.postgresql.Driver
