--- a/book/src/main/resources/application.yml
+++ b/book/src/main/resources/application.yml
@@ -28,13 +28,13 @@ eureka:  client:    service-url:
     schemas: public
     user: postgres
     password: postgres
-resilience4j:  retry:    instances:      default:
+resilience4j:  retry:  # Fica fazendo tentativas de retry    instances:      default:
         max-attempts: 5
       foo-bar:
         max-attempts: 6  # Faz 6 tentativas no retry
         wait-duration: 1s # espera 1 segundo para cada requisiçao
         enable-exponential-backoff: true # faz as tentativas de forma exponencial, ex: 1s, 2s, 3s.....
-  ratelimiter:    instances:
+  ratelimiter: # Limite de requisiçoes    instances:
       default:        limit-for-period: 2
         limit-refresh-period: 10s   # Só pode fazer duas requisições a cada 10 segundos
   bulkhead:    instances:      default: 
