--- a/book/pom.xml
+++ b/book/pom.xml
@@ -79,6 +79,11 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-webmvc-core</artifactId>
+			<version>1.5.7</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
