Adicionado dendências do zipkin, sleuth e rabbitmq ao currency e api gateway.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -8,3 +8,6 @@ eureka:
 spring:  application:    name: api-gateway
   #cloud:  #  gateway:  #    discovery:  #      locator:  #        enabled: true
   #        lower-case-service-id: true
+  sleuth:
+    sampler:
+      probability: 1.0
